# binkybox

./: .gitignore  Cargo.toml  LICENSE  README.md  binkybox-manifest.rc  binkybox.exe.manifest  build.rs  rustfmt.toml
src/: config.rs  gui.rs  keys.rs  logging.rs  main.rs  tray.rs  util.rs  version.rs
src/tray/: gui.rs
