[package]
name = "binkybox"
version = "0.1.0"
edition = "2021"
authors = ["Nadim Kobeissi <nadim@symbolic.software>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = 3
strip = "symbols"

[dependencies]
winvd = "0.0.45"
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
tray-item = "0.9.0"
tokio = { version="1.34.0", features = ["full"] }
winsafe = { version = "0.0.18", features = ["gui"] }
regex = "1.10.2"

[build-dependencies]
embed-resource = "2.4.0"
