[package]
name = "binkybox"
version = "0.1.4"
edition = "2021"
authors = ["Nadim Kobeissi <nadim@symbolic.software>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = 3
strip = "symbols"
codegen-units = 1
debug = false
panic = "abort"

[dependencies]
winvd = "0.0.46"
tray-item = "0.9.0"
tokio = { version="1.34.0", features = ["full"] }
winsafe = { version = "0.0.18", features = ["gui"] }
regex = "1.10.2"
json = "0.12.4"
open = "5.0.0"
inputbot = "0.6.0"

[build-dependencies]
embed-resource = "2.4.0"
