[package]
name = "binkybox"
version = "0.2.2"
edition = "2021"
authors = ["Nadim Kobeissi <nadim@symbolic.software>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = 3
strip = "symbols"
codegen-units = 1
debug = false
panic = "abort"

[dependencies]
winvd = "=0.0.48"
tray-item = "0.9.0"
tokio = { version="1.34.0", features = ["full"] }
winsafe = { version = "0.0.18", features = ["gui"] }
regex = "1.10.2"
json = "0.12.4"
open = "5.0.0"
inputbot = "0.6.0"
lazy_static = "1.4.0"
windows = { version = "=0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Controls", "Win32_System_Console"] }
log = "0.4.27"
simple_logger = { version = "5.0.0", features = ["stderr", "timestamps"] }

[build-dependencies]
embed-resource = "2.4.0"
